--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
-html, body {height:100%;}
-.login {background:url(../images/bg_login.jpg) no-repeat 50% 50%;}
-.loginWrap {position:fixed;top:50%;left:50%;width:589px;height:401px;margin:-200px 0 0 -245px;background:url(../images/bg_login_wrap.png) no-repeat;}
+html {height:100%;}
+.login {position:relative;height:100%;max-height:835px;background:url(../images/bg_login.jpg) no-repeat 50% 0;}
+.loginWrap {position:absolute;;top:50%;left:50%;width:589px;height:401px;margin:-200px 0 0 -295px;background:url(../images/bg_login_wrap.png) no-repeat;}
 .loginWrap h1 {padding:59px 0 24px;text-align:center;}
 .loginTxt {color:#082b4a;font-size:14px;text-align:center;}
 .loginField {width:343px;margin:25px auto 0;border-top:1px solid #eae7e4;}
@@ -14,5 +14,138 @@ html, body {height:100%;}
 .loginField .pwWrap label {background:url(../images/icon_login_pw.png) no-repeat;}
 .loginField .saveId {display:inline-block;margin:5px 0 0 133px;font-size:13px;}
 .loginField .btnWrap {margin:20px 0 0;}
+.login .copy {position:absolute;bottom:15px;right:0;left:0;text-align:center;color:#fff;}
 
+#header {position:fixed;top:0;left:0;right:0;background:#fff;z-index:100;}
+#header .headTop {position:relative;width:1000px;height:63px;margin:0 auto;}
+.headTop h1 a {line-height:63px;}
+.headTop h1 img {vertical-align:middle;}
 
+.headTop .headMenu {position:absolute;right:0;top:16px;}
+.headMenu {}
+.headMenu .link {display:inline-block;margin:5px 0 0 17px;line-height:20px;font-size:10px;}
+.headMenu .mypage {padding:0 0 0 18px;background:url(../images/icon_mypage.gif) no-repeat;}
+.headMenu .logout {display:inline-block;padding:0 0 0 24px;background:url(../images/icon_logout.gif) no-repeat;line-height:20px;font-size:10px;}
+.headMenu .langSel {width:99px;height:29px;margin:0 0 0 25px;border:1px solid #e9e9e9;line-height:29px;}
+
+#gnb {background:#105388;}
+#gnb .gnbNav {position:relative;width:1000px;height:43px;margin:0 auto;}
+#gnb .gnbNav ul {position:relative;z-index:2;}
+#gnb .gnbNav li {float:left;width:125px;}
+#gnb .gnbNav li a {display:block;margin:0 0 0 -1px;background:#105388;border:1px solid #0e4d7f;line-height:41px;text-align:center;color:#fff;}
+#gnb .gnbNav li:first-child a {margin:0;}
+#gnb .gnbNav li a.on,
+#gnb .gnbNav li a:hover {position:relative;background:#2b7cbb;border:1px solid #2b7cbb;font-weight:bold;}
+#gnb .gnbNav .depth2 {display:none;position:absolute;top:43px;width:125px;padding:5px 0 0;}
+#gnb .depth2 li {float:none;font-family:Dotum;margin:10px 0 0;}
+#gnb .depth2 li a {background:none;border:0;line-height:1.5;color:#838383;}
+#gnb .depth2 li a:hover {background:none;border:0;font-weight:normal;}
+#gnb .bg2depth {display:none;position:absolute;top:43px;left:0;width:1002px;background:url(../images/bg_gnb_depth2.png) no-repeat 0 100%;}
+#gnb .bg2depth div {width:1000px;border-top:1px solid #e9e9e9;}
+
+#container {width:1000px;margin:108px auto 0;padding:40px 0 80px;}
+#container:after {content:"";display:block;clear:both;}
+.main #container {width:auto;height:682px;margin:108px 0 0;padding:0;background:url(../images/bg_main.jpg) no-repeat;}
+.main #container h1 {padding:85px 0 65px;text-align:center;}
+
+.mainWrap {position:relative;width:1000px;margin:0 auto;}
+.mainItem1, .mainItem2 {position:absolute;top:0;left:20px;width:250px;height:151px;background:url(../images/bg_main_box1.png) no-repeat;}
+.mainItem2 {left:270px;}
+.mainItem3, .mainItem4 {position:absolute;top:151px;left:20px;width:250px;height:190px;background:url(../images/bg_main_box2.png) no-repeat;}
+.mainItem4 {left:270px;}
+.mainItem5 {position:absolute;top:0;right:18px;width:462px;height:342px;background:url(../images/bg_main_box3.png) no-repeat;}
+.mainWrap .tit {margin:5px 0 0;color:#fff;font-size:14px;line-height:40px;text-align:center;font-weight:normal;}
+.mainItem5 .tit {font-size:16px;}
+.mainItem5 .more {position:absolute;top:18px;right:20px;width:17px;height:17px;overflow:hidden;background:url(../images/btn_notice_more.png) no-repeat;}
+.mainItem5 .more span {visibility:hidden;}
+
+.mainWrap .itemList {margin:0 0 0 15px;}
+.mainWrap .itemList li {margin:5px 0 0;color:#444;font:11px/1.5 Dotum;letter-spacing:1px;}
+.mainWrap .noticeList {margin:0 25px;}
+.mainWrap .noticeList li {background:url(../images/dot_line.gif) repeat-x;}
+.mainWrap .noticeList li:first-child {background:none;}
+.mainWrap .noticeList li a {position:relative;display:block;padding:0 0 0 21px;color:#444;font:11px/32px Dotum;letter-spacing:1px;}
+.mainWrap .noticeList li a:after {content:"";position:absolute;top:15px;left:0;width:3px;height:3px;background:#444;}
+.mainWrap .noticeList li span {display:inline-block;vertical-align:middle;}
+.mainWrap .noticeList li .sort {width:60px;letter-spacing:0;}
+.mainWrap .noticeList li .txt {width:265px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
+
+#snb {position:fixed;top:145px;bottom:80px;left:50%;margin:0 0 0 -500px;width:150px;overflow-y:auto;overflow-x:hidden;}
+#snb .snbWrap {width:148px;border:1px solid #e9e9e9;}
+#snb h2 {background:#2b7cbb;color:#fff;font-size:12px;line-height:38px;text-align:center;}
+
+#snb .sNav {border-top:1px solid #e9e9e9;font-family:Dotum;}
+#snb .sNav:first-child {border-top:0;}
+#snb .sNav li {border-top:1px solid #e9e9e9;}
+#snb .sNav li a {display:block;padding:13px 15px 13px 32px;background:url(../images/icon_snb.gif) no-repeat 12px 15px;font-size:11px;color:#444;}
+#snb .sNav li:first-child {border-top:0;}
+
+#snb .acoNav {padding:12px 0 15px;}
+#snb .acoNav .tit {margin:0 0 0 16px;font-size:11px;color:#444;}
+#snb .acoNav li {margin:10px 0 0 17px;border:0;}
+#snb .acoNav li a {display:inline-block;padding:0 0 0 17px;background:url(../images/icon_snb_open.gif) no-repeat 0 1px;}
+#snb .acoNav li a.open {background:url(../images/icon_snb_close.gif) no-repeat 0 1px;}
+#snb .acoNav li li {margin:10px 0 0 5px;}
+#snb .acoNav li ul {display:none;}
+#snb .acoNav li li a {padding:0 0 0 12px;background:url(../images/icon_snb_tree.gif) no-repeat 0 5px;}
+
+#contents {float:right;width:820px;z-index:2;}
+.location {margin:0 0 10px;font-size:8px;}
+.location span {display:inline-block;margin:0 5px;color:#444;font-size:12px;vertical-align:-1px;}
+
+.btnSnb {position:fixed;top:50%;left:50%;margin:0 0 0 -340px;overflow:hidden;width:9px;height:13px;background:url(../images/btn_snb_hide.gif) no-repeat;}
+.btnSnb span {visibility:hidden;}
+
+#footer {position:fixed;bottom:0;left:0;right:0;background:#fff;border-top:1px solid #e9e9e9;z-index:100;}
+.main #footer {position:static;}
+#footer .footWrap {position:relative;width:1000px;line-height:60px;margin:0 auto;text-align:center;}
+#footer .footWrap img {vertical-align:middle;}
+#footer .copy {position:absolute;top:0;right:0;color:#e8e8e8;line-height:60px;}
+
+.bbsList {border-top:2px solid #2b7cbb;}
+.bbsList thead th {height:27px;border-bottom:1px solid #444;color:#000;}
+.bbsList td {height:29px;border-bottom:1px solid #e9e9e9;font-family:Dotum;text-align:center;}
+.bbsList .txt {text-align:left;}
+.bbsList .txt a {display:inline-block;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;vertical-align:middle;}
+.bbsList .file span {display:inline-block;padding-left:18px;background:url(../images/icon_file.gif) no-repeat 0 50%;color:#2b7cbb;font-weight:bold;}
+
+.bbsView {border-top:2px solid #2b7cbb;border-bottom:1px solid #e9e9e9;font-family:Dotum;}
+.bbsView thead th {padding:8px 15px;font-weight:normal;font-size:14px;text-align:left;}
+.bbsView tbody th {background:#e9e9e9;font-weight:normal;}
+.bbsView tbody td {border-top:1px solid #e9e9e9;}
+.bbsView .name {padding:7px 6px;}
+.bbsView .date {text-align:center;}
+.bbsView .file {padding:10px 15px;}
+.bbsView .file span {display:inline-block;width:32%;}
+.bbsView .file span a {display:inline-block;max-width:80%;overflow:hidden;margin:2px 0;padding-left:18px;background:url(../images/icon_file.gif) no-repeat 0 50%;text-overflow:ellipsis;white-space:nowrap;vertical-align:middle;font-weight:bold;color:#2b7cbb;}
+.bbsView .viewCont {padding:15px;border-top:1px solid #e9e9e9;}
+.bbsView .viewAnswer {padding:15px;border-top:1px solid #e9e9e9;}
+.bbsView .viewAnswer .answerDate {margin:0 0 10px;color:#444;font-weight:bold;}
+.bbsView .viewAnswer .btnWrap {text-align:right;}
+.bbsView .viewNav li {padding:8px 0;border-top:1px solid #e9e9e9;}
+.bbsView .viewNav li span {display:inline-block;width:75px;margin-right:10px;text-align:center;}
+.bbsView .viewNav li a {display:inline-block;max-width:75%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;vertical-align:middle;}
+
+.bbsWrite {border-top:2px solid #2b7cbb;}
+.bbsWrite th,
+.bbsWrite td {padding:10px 0;}
+.bbsWrite th {padding-left:10px;text-align:left;}
+.bbsWrite .subject th,
+.bbsWrite .subject td {border-bottom:1px solid #e9e9e9;}
+.bbsWrite .subject .txt {width:98%;line-height:18px;border:1px solid #e9e9e9;}
+.bbsWrite .fileAdd {display:inline-block;width:20px;height:20px;overflow:hidden;text-indent:-9999px;background:url(../images/btn_file_add.gif) no-repeat;vertical-align:middle;}
+.bbsWrite .editer {padding:20px 0 0;border-top:1px solid #444;}
+.bbsWrite .editer div {height:260px;background:#ccc;}
+table .alC {text-align:center;}
+table .alR {text-align:right;}
+table .alL {text-align:left;}
+
+.btnS {display:inline-block;}
+.btnS span {display:inline-block;min-width:40px;padding:0 10px;line-height:20px;text-align:center;}
+.btnSlf {background:url(../images/btn_s_lf.gif) no-repeat 100% 0;}
+.btnSlf span {background:url(../images/btn_s_lf2.gif) no-repeat;}
+.btnSb {background:url(../images/btn_s_b.gif) no-repeat 100% 0;color:#fff;}
+.btnSb span {background:url(../images/btn_s_b2.gif) no-repeat;}
+
+.fcR {color:#ff0000;}
+.fcB {color:#105388;}
