--- a/css/common.css
+++ b/css/common.css
@@ -92,9 +92,11 @@ html {height:100%;}
 #contents {float:right;width:820px;z-index:2;}
 .location {margin:0 0 10px;font-size:8px;}
 .location span {display:inline-block;margin:0 5px;color:#444;font-size:12px;vertical-align:-1px;}
+.location select {margin:0 5px;height:30px;line-height:30px;border:1px solid #e9e9e9;}
 
-.btnSnb {position:fixed;top:50%;left:50%;margin:0 0 0 -340px;overflow:hidden;width:9px;height:13px;background:url(../images/btn_snb_hide.gif) no-repeat;}
+.btnSnb {position:fixed;top:50%;left:50%;margin:0 0 0 -340px;overflow:hidden;width:9px;height:13px;background:url(../images/btn_snb_hide.gif) no-repeat 0 0;}
 .btnSnb span {visibility:hidden;}
+.returnSnb {background-position:-9px 0;}
 
 #footer {position:fixed;bottom:0;left:0;right:0;background:#fff;border-top:1px solid #e9e9e9;z-index:100;}
 .main #footer {position:static;}
@@ -102,12 +104,47 @@ html {height:100%;}
 #footer .footWrap img {vertical-align:middle;}
 #footer .copy {position:absolute;top:0;right:0;color:#e8e8e8;line-height:60px;}
 
+.searchWrap {position:relative;margin:0 0 30px;padding:15px 0 20px;border-top:2px solid #444;border-bottom:1px solid #e9e9e9;}
+.searchTable {overflow:hidden;height:95px;padding:0 80px 0 0;}
+.searchTable th {text-align:left;font-weight:normal;}
+.searchTable td {padding:4px 0;}
+.searchTable select {height:28px;line-height:28px;}
+.searchTable .txt {padding:4px 5px;}
+.searchTable .date .swung {display:inline-block;margin:0 10px;}
+.searchTable .date2 label {margin-right:20px;}
+
+.btnCal {overflow:hidden;width:19px;height:19px;margin:0 0 0 5px;background:url(../images/btn_cal.gif) no-repeat;text-indent:-9999px;}
+
+.searchWrap .btnSearch {position:absolute;top:50%;right:0;overflow:hidden;width:76px;height:76px;margin:-38px 0 0;background:url(../images/btn_search.gif) no-repeat;text-indent:-9999px;}
+.searchWrap .searchToggle {position:absolute;bottom:-25px;left:50%;width:25px;height:24px;overflow:hidden;background:url(../images/btn_search_toggle.gif) no-repeat;text-indent:-9999px;}
+
+.tabMenu ul {zoom:1;width:100%;overflow:hidden;}
+.tabMenu li {float:left;}
+.tabMenu li a {display:inline-block;margin-right:-1px;background:url(../images/bg_tab_box.gif) no-repeat 100% 0;}
+.tabMenu li a span {display:inline-block;min-width:60px;padding:0 20px;;background:url(../images/bg_tab_box2.gif) no-repeat;line-height:26px;text-align:center;}
+.tabMenu li a.on {background:url(../images/bg_tab_on.gif) no-repeat 100% 0;color:#fff;}
+.tabMenu li a.on span {background:url(../images/bg_tab_on2.gif) no-repeat 0 0;}
+
 .bbsList {border-top:2px solid #2b7cbb;}
 .bbsList thead th {height:27px;border-bottom:1px solid #444;color:#000;}
-.bbsList td {height:29px;border-bottom:1px solid #e9e9e9;font-family:Dotum;text-align:center;}
+.bbsList td {min-height:20px;padding:5px 0;border-bottom:1px solid #e9e9e9;font-family:Dotum;text-align:center;}
 .bbsList .txt {text-align:left;}
 .bbsList .txt a {display:inline-block;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;vertical-align:middle;}
 .bbsList .file span {display:inline-block;padding-left:18px;background:url(../images/icon_file.gif) no-repeat 0 50%;color:#2b7cbb;font-weight:bold;}
+.bbsList .lineType1 td {background:#f3c4c4;}
+.bbsList .lineType2 td {background:#fef4ff;}
+.bbsList .lineType3 td {background:#f4f8ff;}
+.bbsList .lineType4 td {background:#f6f6f6;}
+
+.scrollHead {padding:0 16px 0 0;}
+.scrollBody {height:300px;overflow-y:auto;}
+
+.bbsList2 {border-top:2px solid #444;}
+.bbsList2 th,
+.bbsList2 td {min-height:22px;padding:5px 0;border-bottom:1px solid #e9e9e9;}
+.bbsList2 th {padding-left:20px;text-align:left;}
+.bbsList2 td  {font-family:Dotum;}
+.bbsList2 td input.txt {height:20px;line-height:20px;}
 
 .bbsView {border-top:2px solid #2b7cbb;border-bottom:1px solid #e9e9e9;font-family:Dotum;}
 .bbsView thead th {padding:8px 15px;font-weight:normal;font-size:14px;text-align:left;}
@@ -136,9 +173,25 @@ html {height:100%;}
 .bbsWrite .fileAdd {display:inline-block;width:20px;height:20px;overflow:hidden;text-indent:-9999px;background:url(../images/btn_file_add.gif) no-repeat;vertical-align:middle;}
 .bbsWrite .editer {padding:20px 0 0;border-top:1px solid #444;}
 .bbsWrite .editer div {height:260px;background:#ccc;}
+
 table .alC {text-align:center;}
 table .alR {text-align:right;}
 table .alL {text-align:left;}
+
+.bbsBtn {float:right;margin-top:-40px;}
+
+.bbsSearch {text-align:center;}
+.bbsSearch * {vertical-align:middle;}
+.bbsSearch select {height:30px;line-height:30px;}
+.bbsSearch input.txt {height:28px;margin:0 5px;line-height:28px;}
+.bbsSearch .btnM span {min-width:36px;}
+
+.btnWrap {position:relative;min-height:30px;margin:20px 0 0;text-align:center;}
+.btnWrap .btnRight {position:absolute;top:0;right:0;}
+.btnWrap .btnLeft {position:absolute;top:0;left:0;}
+
+.btn {display:inline-block;text-align:center;}
+.btnLogin {width:153px;line-height:40px;background:url(../images/btn_login.png) no-repeat;color:#fff;font-size:16px;}
 
 .btnS {display:inline-block;}
 .btnS span {display:inline-block;min-width:40px;padding:0 10px;line-height:20px;text-align:center;}
@@ -147,5 +200,21 @@ table .alL {text-align:left;}
 .btnSb {background:url(../images/btn_s_b.gif) no-repeat 100% 0;color:#fff;}
 .btnSb span {background:url(../images/btn_s_b2.gif) no-repeat;}
 
+.btnM {display:inline-block;}
+.btnM span {display:inline-block;min-width:76px;padding:0 12px;line-height:30px;text-align:center;}
+.btnMlf {background:url(../images/btn_m_lf.gif) no-repeat 100% 0;}
+.btnMlf span {background:url(../images/btn_m_lf2.gif) no-repeat;}
+.btnMb {background:url(../images/btn_m_b.gif) no-repeat 100% 0;color:#fff;}
+.btnMb span {background:url(../images/btn_m_b2.gif) no-repeat;}
+
+.btnPrint span:before {content:"";display:inline-block;width:17px;height:17px;margin-right:4px;background:url(../images/icon_print.gif) no-repeat;vertical-align:-4px;}
+.btnDown span:before {content:"";display:inline-block;width:13px;height:13px;margin-right:4px;background:url(../images/icon_down.gif) no-repeat;vertical-align:-2px;}
+.btnHistory span:before {content:"";display:inline-block;width:17px;height:15px;margin-right:4px;background:url(../images/icon_history.gif) no-repeat;vertical-align:-4px;}
+
+.btnProduct {display:inline-block;padding-left:19px;background:url(../images/icon_plus.gif) no-repeat 0 50%;font-weight:bold;}
+
 .fcR {color:#ff0000;}
 .fcB {color:#105388;}
+
+#popupWrap {padding:15px;}
+.popupTitle {padding:0 15px 15px;font-size:16px;}
