--- a/css/default.css
+++ b/css/default.css
@@ -46,19 +46,7 @@ legend, caption {visibility:hidden;width:0;font-size:0;line-height:0;text-indent
 address, em {font-style:normal;}
 button {overflow:visible;cursor:pointer;background:none;border:0;}
 
-textarea {padding:0 5px;background:#fdfeff;border:1px solid #cfd6d9;resize:none;border-radius:1px;}
-input.txt {line-height:1.1;padding:0 5px;}
+textarea {padding:0 5px;background:#fff;border:1px solid #e9e9e9;resize:none;border-radius:1px;}
+select {border-radius:0;border:1px solid #e9e9e9;}
+input.txt {line-height:1.1;padding:0 5px;border-radius:0;border:1px solid #e9e9e9;}
 input.chk {width:13px;height:13px;vertical-align:-2px;}
-.inputFile {position:relative;display:block;}
-.inputFile .txt {width:95%;background:#dde1e3;}
-.inputFile .fileBtn {position:absolute;overflow:hidden;top:0;right:0;}
-.inputFile .fileBtn input {position:absolute;width:100%;cursor:pointer;font-size:22px;opacity:0;filter:alpha(opacity=0);-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";}
-
-.skipNavi li {font-size:0;line-height:0;}
-.skipNavi li a {position:fixed;top:-100px;left:0;width:100%;padding:10px 0;background:#65b6f5;color:#fff;font-size:14px;line-height:2;text-align:center;z-index:500;}
-.skipNavi li a:focus {top:0;} 
-
-.btnWrap {text-align:center;}
-
-.btn {display:inline-block;text-align:center;}
-.btnLogin {width:153px;line-height:40px;background:url(../images/btn_login.png) no-repeat;color:#fff;font-size:16px;}
