--- a/css/common.css
+++ b/css/common.css
@@ -104,6 +104,8 @@ html {height:100%;}
 #footer .footWrap img {vertical-align:middle;}
 #footer .copy {position:absolute;top:0;right:0;color:#e8e8e8;line-height:60px;}
 
+.subTitle {margin:15px 0 0;padding:0 15px 15px;font-size:16px;}
+
 .searchWrap {position:relative;margin:0 0 30px;padding:15px 0 20px;border-top:2px solid #444;border-bottom:1px solid #e9e9e9;}
 .searchTable {overflow:hidden;height:95px;padding:0 80px 0 0;}
 .searchTable th {text-align:left;font-weight:normal;}
@@ -117,6 +119,12 @@ html {height:100%;}
 
 .searchWrap .btnSearch {position:absolute;top:50%;right:0;overflow:hidden;width:76px;height:76px;margin:-38px 0 0;background:url(../images/btn_search.gif) no-repeat;text-indent:-9999px;}
 .searchWrap .searchToggle {position:absolute;bottom:-25px;left:50%;width:25px;height:24px;overflow:hidden;background:url(../images/btn_search_toggle.gif) no-repeat;text-indent:-9999px;}
+.searchWrap .openSearch {background-position:-25px 0;}
+
+.searchWrap2 {position:relative;padding:15px 150px 15px 100px;border:1px solid #e9e9e9;}
+.searchWrap2 label {position:absolute;top:17px;left:15px;font-size:16px;}
+.searchWrap2 input.txt {width:100%;height:30px;line-height:30px;}
+.searchWrap2 .btnM {position:absolute;top:15px;right:15px;}
 
 .tabMenu ul {zoom:1;width:100%;overflow:hidden;}
 .tabMenu li {float:left;}
@@ -130,6 +138,7 @@ html {height:100%;}
 .bbsList td {min-height:20px;padding:5px 0;border-bottom:1px solid #e9e9e9;font-family:Dotum;text-align:center;}
 .bbsList .txt {text-align:left;}
 .bbsList .txt a {display:inline-block;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;vertical-align:middle;}
+.bbsList input.txt {width:80%;height:18px;line-height:18px;text-align:center;}
 .bbsList .file span {display:inline-block;padding-left:18px;background:url(../images/icon_file.gif) no-repeat 0 50%;color:#2b7cbb;font-weight:bold;}
 .bbsList .lineType1 td {background:#f3c4c4;}
 .bbsList .lineType2 td {background:#fef4ff;}
@@ -179,6 +188,7 @@ table .alR {text-align:right;}
 table .alL {text-align:left;}
 
 .bbsBtn {float:right;margin-top:-40px;}
+.addBtn {float:right;margin-top:-30px;}
 
 .bbsSearch {text-align:center;}
 .bbsSearch * {vertical-align:middle;}
