--- a/css/default.css
+++ b/css/default.css
@@ -32,8 +32,8 @@
 }
 
 * {margin:0;padding:0;}
+html,body {height:100%;}
 body {color:#444;font:12px/1.5 Nanum Gothic, dotum, '돋움', sans-serif;-webkit-text-size-adjust:none;}
-h1,h2,h3,h4,h5 {font-size:100%;}
 a {color:#444;text-decoration:none;}
 ul, ol, li {list-style:none;}
 table {width:100%;border-collapse:collapse;border:0;table-layout:fixed;}
