--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .login {position:relative;height:100%;max-height:835px;background:url(../images/bg_login.jpg) no-repeat 50% 0;background-size:cover;}
-.loginWrap {position:absolute;;top:50%;left:50%;width:600px;height:390px;margin:-200px 0 0 -295px;}
+.loginWrap {position:absolute;top:50%;left:50%;width:600px;height:390px;margin:-200px 0 0 -295px;}
 .loginWrap * {position:relative;z-index:2;}
 .loginWrap:before {content:"";position:absolute;top:0;right:0;bottom:0;left:0;border:1px solid #fff;border-radius:8px;}
 .loginWrap:after {content:"";position:absolute;top:3px;right:3px;bottom:3px;left:3px;background:#fff;border-radius:8px;opacity:.8;}
@@ -17,6 +17,11 @@
 .loginField .saveId {display:inline-block;margin:5px 0 0 133px;font-size:13px;}
 .loginField .btnWrap {margin:20px 0 0;}
 .login .copy {position:absolute;bottom:15px;right:0;left:0;text-align:center;color:#fff;}
+
+@media all and (max-width:1023px) {
+	.login {max-height:100%;}
+	.loginWrap {width:600rem;height:390rem;margin:0;transform:translate(-50%, -50%);}
+}
 
 #header {position:fixed;top:0;left:0;right:0;background:#fff;z-index:100;}
 #header .headTop {position:relative;width:1000px;height:63px;margin:0 auto;}
@@ -47,18 +52,19 @@
 
 #container {width:1000px;margin:108px auto 0;padding:40px 0 80px;}
 #container:after {content:"";display:block;clear:both;}
-.main #container {width:auto;height:682px;margin:108px 0 0;padding:0;background:url(../images/bg_main.jpg) no-repeat;}
+.main {background:url(../images/bg_main.jpg) no-repeat;background-size:cover;}
+.main #container {position:fixed;height:682px;top:50%;left:50%;padding:0;margin:-320px 0 0 -500px;}
 .main #container h1 {padding:85px 0 25px;text-align:center;}
 
 .selDate {width:955px;margin:0 auto 10px;font-size:14px;}
 .selDate select {height:30px;line-height:30px;}
 
 .mainWrap {position:relative;width:1000px;margin:0 auto;}
-[class*="mainItem"] {width:245px;background:#fff;border-radius:10px;box-shadow:0 0 4px rgba(0,0,0,0.5);}
-.mainItem1, .mainItem2 {position:absolute;top:0;left:20px;height:140px;}
-.mainItem2 {left:275px;}
-.mainItem3, .mainItem4 {position:absolute;top:150px;left:20px;height:180px;}
-.mainItem4 {left:275px;}
+[class*="mainItem"] {width:255px;background:#fff;border-radius:10px;box-shadow:0 0 4px rgba(0,0,0,0.5);}
+.mainItem1, .mainItem2 {position:absolute;top:0;left:0;height:140px;}
+.mainItem2 {left:265px;}
+.mainItem3, .mainItem4 {position:absolute;top:150px;left:0;height:180px;}
+.mainItem4 {left:265px;}
 .mainItem5 {position:absolute;top:0;right:0;width:470px;height:330px;}
 [class*="mainItem"] .tit {background:#2b7cbb;border-radius:10px 10px 0 0;color:#fff;font-size:14px;line-height:40px;text-align:center;font-weight:normal;}
 .mainItem5 .tit {background:#444;font-size:16px;}
@@ -104,7 +110,6 @@
 .returnSnb {background-position:-9px 0;}
 
 #footer {position:fixed;bottom:0;left:0;right:0;background:#fff;border-top:1px solid #e9e9e9;z-index:100;}
-.main #footer {position:static;}
 #footer .footWrap {position:relative;width:1000px;line-height:60px;margin:0 auto;text-align:center;}
 #footer .footWrap img {vertical-align:middle;}
 #footer .copy {position:absolute;top:0;right:0;color:#e8e8e8;line-height:60px;}
