--- a/css/default.css
+++ b/css/default.css
@@ -33,7 +33,7 @@
 
 * {margin:0;padding:0;}
 html,body {height:100%;}
-body {color:#444;font:12px/1.5 Nanum Gothic, dotum, '돋움', sans-serif;-webkit-text-size-adjust:none;}
+body {color:#444;font:12px/1.5 Nanum Gothic, Dotum, '돋움', sans-serif;-webkit-text-size-adjust:none;}
 a {color:#444;text-decoration:none;}
 ul, ol, li {list-style:none;}
 table {width:100%;border-collapse:collapse;border:0;table-layout:fixed;}
@@ -50,3 +50,9 @@ textarea {padding:0 5px;background:#fff;border:1px solid #e9e9e9;resize:none;bor
 select {border-radius:0;border:1px solid #e9e9e9;}
 input.txt {line-height:1.1;padding:0 5px;border-radius:0;border:1px solid #e9e9e9;}
 input.chk {width:13px;height:13px;vertical-align:-2px;}
+
+@media all and (max-width:1023px) {
+	body, input, select, textarea, button {font-size:14rem}
+	textarea, input.txt {padding:0 5rem;border-width:1rem;}
+	input.chk {width:13rem;height:13rem;}
+}
